src/test/resources/Parser/SyntaxErrors/ParameterizedTypeVariable.front
import Type;

class A:
    f() {
        T : Type = A;
        T<int32>;
    }